# Conway-s-Game-of-life---Tkinter

./: .pre-commit-config.yaml  README.md  __main__.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
game_of_life/: gui.py  logic.py  utils.py
game_of_life.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_logic.py
