[metadata]
name = game-of-life
version = 0.1.0
description = A Tkinter implementation of Conway's Game of Life
license = MIT

[options]
packages = find:
python_requires = >=3.10

[tool:pytest]
testpaths = tests

[mypy]
python_version = 3.12
disallow_untyped_defs = True
ignore_missing_imports = True

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
